# LinearProgrammingSolver

./: .clangd  .gitignore  CMakeLists.txt  EXECUTABLE_TEST_PLAN.md  PHASE1_CHECKLIST.md  README.md  README_zh.md  mat3007h_Project_Manual.tex  run-test-plan.ps1
build-umfpack/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lp_solver.sln  lp_solver.vcxproj  lp_solver.vcxproj.filters  lp_solver_advanced_features_tests.vcxproj  lp_solver_advanced_features_tests.vcxproj.filters  lp_solver_smoke_tests.vcxproj  lp_solver_smoke_tests.vcxproj.filters  lp_solver_stress_tests.vcxproj  lp_solver_stress_tests.vcxproj.filters
build-umfpack/Testing/Temporary/: CTestCostData.txt
build-umfpack/lp_solver.dir/Debug/: lp_solver.lib.recipe
build-umfpack/lp_solver.dir/Debug/lp_solver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-umfpack/lp_solver_advanced_features_tests.dir/Debug/: lp_solver_advanced_features_tests.exe.recipe
build-umfpack/lp_solver_advanced_features_tests.dir/Debug/lp_solve.59172DB8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-umfpack/lp_solver_smoke_tests.dir/Debug/: lp_solver_smoke_tests.exe.recipe
build-umfpack/lp_solver_smoke_tests.dir/Debug/lp_solve.043C62A1.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-umfpack/lp_solver_stress_tests.dir/Debug/: lp_solver_stress_tests.exe.recipe
build-umfpack/lp_solver_stress_tests.dir/Debug/lp_solve.B64923C7.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  lp_solver_stress_tests.lastbuildstate
build-umfpack/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build-umfpack/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
build-umfpack/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
eigen-5.0.0/: .gitignore
include/lp_solver/: lp_solver.hpp
include/lp_solver/linalg/: eigen_factor.hpp  i_basis_factor.hpp  umfpack_factor.hpp
include/lp_solver/linalg/detail/: sparse_lu_engine.hpp  sparse_triangular.hpp
include/lp_solver/model/: problem_data.hpp  solver_state.hpp
include/lp_solver/presolve/: presolver.hpp
include/lp_solver/simplex/: dual_simplex.hpp  i_row_pivot.hpp  i_solver_observer.hpp
include/lp_solver/util/: indexed_vector.hpp  packed_matrix.hpp
src/linalg/: eigen_factor.cpp  factor_factory.cpp  sparse_lu_engine.cpp  sparse_triangular.cpp  umfpack_factor.cpp
src/presolve/: presolver.cpp
src/simplex/: dual_simplex.cpp
src/util/: indexed_vector.cpp  packed_matrix.cpp
tests/: advanced_features_test.cpp  smoke_test.cpp  stress_test.cpp
